# carz

./: .gitignore  README.md
carz-game-frontend/: .eslintignore  .eslintrc.js  package.json  tsconfig.json  webpack.config.js
carz-game-frontend/public/: index.html
carz-game-frontend/src/: App.tsx
carz-game-frontend/src/game/: Carz.tsx
carz-game-frontend/src/hooks/: useKeyPress.ts
carz-game-frontend/src/models/: interfaces.ts
carz-game-logic/: Cargo.toml
carz-game-logic/logic/: Cargo.toml  config.yml
carz-game-logic/logic/src/: game.rs  lib.rs
carz-game-logic/logic/src/game/: action.rs  board.rs  car.rs  config.rs  game_statistics.rs  obstacle.rs
carz-game-logic/src/: main.rs
