[package]
name = "carz-game-logic"
version = "0.1.0"
authors = ["Malte Loller-Andersen <malte.loller-andersen@knowit.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
logic = { path = "logic" }
tokio-tungstenite = "0.10"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"