[package]
name = "logic"
version = "0.1.0"
authors = ["Malte Loller-Andersen <malte.loller-andersen@knowit.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
vector2d = "2.2"
